--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     <application
         android:label="FinTrack"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="flutterEmbedding" android:value="2" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
