Recreated full Android structure

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,3 +16,12 @@ allprojects {
         mavenCentral()
     }
 }
+
+rootProject.buildDir = '../build'
+subprojects {
+    project.buildDir = "${rootProject.buildDir}/${project.name}"
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
