--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,9 +4,14 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:8.2.1"
+        classpath 'com.android.tools.build:gradle:7.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10"
     }
+}
+
+plugins {
+    id 'com.android.application' version '7.3.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
 
 allprojects {
