--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,14 +5,27 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 34
+    ndkVersion flutter.ndkVersion
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+
     defaultConfig {
         applicationId "com.fintrack.app"
         minSdkVersion 21
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
+
     buildTypes {
         release {
             signingConfig signingConfigs.debug
@@ -21,5 +34,5 @@ android {
 }
 
 dependencies {
-    // No need for explicit kotlin-stdlib, handled by plugin
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
